--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <title>Document</title>
 </head>
 <header>
-    <nav id="menu">
-        <input type="button">
-        <input type="button">
-        <input type="button">
-        <input type="button">
-    </nav>
+    
 </header>
+    <nav id="menu">
+        <input type="button" value="Accueil">
+        <input type="button" value="Groupes">
+        <input type="button" value="matchs">
+        <input type="button" value="classement">
+    </nav>
+
 <body>
     
 </body>
