--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <header>
-    
+    <title>2022 FIFA World Cup</title>
+    <img src="./images/1.jpeg" alt="photo">
 </header>
     <nav id="menu">
         <input type="button" value="Accueil">
