--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <header>
-    <title>2022 FIFA World Cup</title>
+    <h1>2022 FIFA World Cup</h1>
     <img src="./images/1.jpeg" alt="photo">
 </header>
     <nav id="menu">
