--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <header>
     <title>2022 FIFA World Cup</title>
-    <img src="./images/1.jpeg" alt="photo">
+    <img src="images.jpg" alt="photo">
 </header>
     <nav id="menu">
         <input type="button" value="Accueil">
