css not working

--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <header>
+    <img src="./images/2.jpg" alt="photo">
     <h1>2022 FIFA World Cup</h1>
-    <img src="./images/2.jpeg" alt="photo">
-</header>
     <nav id="menu">
         <input type="button" value="Accueil">
         <input type="button" value="Groupes">
         <input type="button" value="matchs">
         <input type="button" value="classement">
     </nav>
+
+</header>
 
 <body>
     
