--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <header>
     <img src="./images/2.jpg" alt="photo">
+    <div id="top">
     <h1>2022 FIFA World Cup</h1>
     <nav id="menu">
         <input type="button" value="Accueil">
         <input type="button" value="Groupes">
         <input type="button" value="matchs">
         <input type="button" value="classement">
-    </nav>
+    </nav></div>
 
 </header>
 
