--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,19 +9,22 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <header>
-    <img src="./images/2.jpg" alt="photo">
+    
     <div id="top">
-    <h1>2022 FIFA World Cup</h1>
-    <nav id="menu">
-        <input type="button" value="Accueil">
-        <input type="button" value="Groupes">
-        <input type="button" value="matchs">
-        <input type="button" value="classement">
-    </nav></div>
+        <h1>FIFA World Cup  2022</h1>
+        <nav id="menu">
+            <input type="button" value="Accueil">
+            <input type="button" value="Groupes">
+            <input type="button" value="matchs">
+            <input type="button" value="classement">
+        </nav>
+    </div>
+    <img src="./images/2.jpg" alt="photo">
 
 </header>
 
 <body>
-    
+
 </body>
+
 </html>
