--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div id="top">
         <h1>FIFA World Cup  2022</h1>
         <nav id="menu">
-            <input type="button" value="Accueil">
-            <input type="button" value="Groupes">
-            <input type="button" value="matchs">
-            <input type="button" value="classement">
+            <input type="button" value="Accueil" class="ele">
+            <input type="button" value="Groupes" class="ele">
+            <input type="button" value="matchs" class="ele">
+            <input type="button" value="classement" class="ele">
         </nav>
     </div>
     <img src="./images/2.jpg" alt="photo">
