--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <header>
     
     <div id="top">
-        <h1>FIFA World Cup  2022</h1>
+        <h1>2022 FIFA World Cup</h1>
         <nav id="menu">
-            <input type="button" value="Accueil" class="ele">
-            <input type="button" value="Groupes" class="ele">
-            <input type="button" value="matchs" class="ele">
-            <input type="button" value="classement" class="ele">
+            <input type="button" value="Accueil">
+            <input type="button" value="Groupes">
+            <input type="button" value="matchs">
+            <input type="button" value="classement">
         </nav>
     </div>
     <img src="./images/2.jpg" alt="photo">
