base for project

--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
 </header>
 
 <body>
-
+<div id="vo">
+    <div id="v2">jkhe</div>
+    <div id="v34">
+        <div id="v3">dbj</div>
+        <div id="v4">cbbih</div>
+    </div>
+    <div id="v5">kjefi</div>
+</div>
 </body>
-
+<footer></footer>
 </html>
