--- a/index.html
+++ b/index.html
@@ -9,15 +9,43 @@
     <link rel="stylesheet" href="stylesheet.css">
     <script src="javascript.js"></script>
 </head>
-<header>
-    
+<header onload="hoverM()">
+
     <div id="top">
         <h1>2022 FIFA World Cup</h1>
-        <nav id="menu">
-            <input type="button" value="Accueil">
-            <input type="button" value="Groupes">
-            <input type="button" value="matchs">
-            <input type="button" value="classement">
+        <nav>
+            <div class="dropdown">
+                <button class="dropbtn">Acceuil</button>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">Groupes</button>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">Classement</button>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">Matchs</button>
+                <div class="dropdown-content">
+                    <a href="#">Link 1</a>
+                    <a href="#">Link 2</a>
+                    <a href="#">Link 3</a>
+                </div>
+            </div>
         </nav>
     </div>
     <img src="./images/2.jpg" alt="photo">
@@ -25,14 +53,15 @@
 </header>
 
 <body>
-<div id="vo">
-    <div id="v2">jkhe</div>
-    <div id="v34">
-        <div id="v3">dbj</div>
-        <div id="v4">cbbih</div>
+    <div id="vo">
+        <div id="v2">jkhe</div>
+        <div id="v34">
+            <div id="v3">dbj</div>
+            <div id="v4">cbbih</div>
+        </div>
+        <div id="v5">kjefi</div>
     </div>
-    <div id="v5">kjefi</div>
-</div>
 </body>
 <footer></footer>
+
 </html>
