--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="stylesheet.css">
-    <script src="javascript.js"></script>
+
 </head>
-<header onload="hoverM()">
+<header>
 
     <div id="top">
         <h1>2022 FIFA World Cup</h1>
