--- a/joueurs.html
+++ b/joueurs.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheet.css">
    
     <title>Liste des joueurs</title>
 </head>
 <body>
-    <table id="table">
+    <table id="table" border="1">
         
     </table> 
-    <script src="./javascript.js"></script>
+   
+   <div id="d1"></div>
+   <script src="javascript.js" type="text/javascript"></script>
+
+   
 </body>
 </html>
