--- a/joueurs.html
+++ b/joueurs.html
@@ -8,7 +8,7 @@
    
     <title>Liste des joueurs</title>
 </head>
-<body>
+<body onload="fc1()">
     <table id="table" border="3">
         
     </table> 
