--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 <body>
     <script src="javascript.js"></script>
     <div id="vo">
-        <iframe id="v2" name="v2" src=""></iframe>
+        <iframe id="v2" name="v2" ></iframe>
         <div id="v34">
-            <iframe id="v3" name="v3"></iframe>
+            <iframe id="v3" name="v3" src="photoCanada.html"></iframe>
                 <div id="page_a"></div>
 
         </div>
@@ -70,6 +70,30 @@
         </div>
     </div>
 </body>
-<footer></footer>
+<footer>
+    <ul>
+        <h2>CONTACTS</h2>
+        <li>ch.liefrid@gmail.com</li>
+        <li>amounaela1@gmail.com</li>
+        <li>achmal715@gmail.com</li>
+        <li>houdadeust@gmail.com</li>
+      </ul>
+    <ul>
+        <h2>Administrateurs</h2>
+    <li>Liefrid Chihab-Eddin</li>
+    <li>Elaoufi Imane</li>
+    <li>Achmal Chetouan Youssef</li>
+    <li>El Asri Houda</li>
+    </ul>
+    <ul>
+        <h2>Links</h2>
+        <a href="default.asp">
+        <img src="./images/git.jpeg" style="width:100px;height:100px;">
+        </a>
+    </ul>
+    <div>
+    <img src="./images/2022.png" alt="photo" style="width:215px;height:225px;margin-left: 265%;">
+</div>
+</footer>
 
 </html>
