--- a/index.html
+++ b/index.html
@@ -53,11 +53,13 @@
 </header>
 
 <body>
+    
     <script src="javascript.js"></script>
     <div id="vo">
+     
         <iframe id="v2" name="v2" ></iframe>
         <div id="v34">
-            <iframe id="v3" name="v3" src="photoCanada.html"></iframe>
+            <iframe id="v3" name="v3" ></iframe>
                 <div id="page_a"></div>
 
         </div>
@@ -70,8 +72,9 @@
         </div>
     </div>
 </body>
+ 
 <footer>
-    <ul>
+    <ul class="ul1">
         <h2>CONTACTS</h2>
         <li>ch.liefrid@gmail.com</li>
         <li>amounaela1@gmail.com</li>
@@ -88,11 +91,11 @@
     <ul>
         <h2>Links</h2>
         <a href="default.asp">
-        <img src="./images/git.jpeg" style="width:100px;height:100px;">
+        <img src="./images/git.jpeg"  width="200px" height="150px">
         </a>
     </ul>
     <div>
-    <img src="./images/2022.png" alt="photo" style="width:215px;height:225px;margin-left: 265%;">
+    <img src="./images/2022.png" alt="photo" style="width:184px;height:143px;margin-left: 355%;">
 </div>
 </footer>
 
