--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </nav>
     </div>
-    <img src="./images/2.jpg" alt="photo">
+    <img src="coup.jpg" alt="photo" class="im2">
 
 </header>
 
@@ -65,9 +65,9 @@
         </div>
         <div id="v5">
             <li>
-                <ol><img src="./images/a1.jpg" alt="" srcset=""><span onclick="fon_a(0);">les Bleus en huitièmes de finale, l'Argentine respire</span></ol>
-                <ol><img src="./images/a2.jpg" alt="" srcset="" ><span onclick="fon_a(1);">entrée en lice de Neymar et Ronaldo</span></ol>
-                <ol><img src="./images/a3.jpg" alt="" srcset=""><span onclick="fon_a(2);">entrée en lice de l'Angleterre, des Pays-Bas et du Sénégal ce lundi</span></ol>
+                <ol><img src="./images/a1.jpg" class="page_A" ><span onclick="fon_a(0);">les Bleus en huitièmes de finale, l'Argentine respire</span></ol>
+                <ol><img src="./images/a2.jpg" class="page_A" ><span onclick="fon_a(1);">entrée en lice de Neymar et Ronaldo</span></ol>
+                <ol><img src="./images/a3.jpg" class="page_A"><span onclick="fon_a(2);">entrée en lice de l'Angleterre, des Pays-Bas et du Sénégal ce lundi</span></ol>
             </li>
         </div>
     </div>
@@ -75,27 +75,27 @@
  
 <footer>
     <ul class="ul1">
-        <h2>CONTACTS</h2>
+        <h2 class="titreFotter">CONTACTS</h2>
         <li>ch.liefrid@gmail.com</li>
         <li>amounaela1@gmail.com</li>
         <li>achmal715@gmail.com</li>
         <li>houdadeust@gmail.com</li>
       </ul>
     <ul>
-        <h2>Administrateurs</h2>
+        <h2 class="titreFotter">Administrateurs</h2>
     <li>Liefrid Chihab-Eddin</li>
     <li>Elaoufi Imane</li>
     <li>Achmal Chetouan Youssef</li>
     <li>El Asri Houda</li>
     </ul>
     <ul>
-        <h2>Links</h2>
+        <h2 class="titreFotter">Links</h2>
         <a href="default.asp">
-        <img src="./images/git.jpeg"  width="200px" height="150px">
+        <img src="coup.jpg"  class="im2">
         </a>
     </ul>
     <div>
-    <img src="./images/2022.png" alt="photo" style="width:184px;height:143px;margin-left: 355%;">
+    <img src="jiji.jpeg" alt="photo" style="width:184px;height:143px;margin-left: 355%;">
 </div>
 </footer>
 
