--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FIFA 2022</title>
     <link rel="stylesheet" href="stylesheet.css">
 
 </head>
@@ -48,7 +48,7 @@
             </div>
         </nav>
     </div>
-    <img src="coup.jpg" alt="photo" class="im2">
+    <img src="ho.jpg" alt="photo" class="im2">
 
 </header>
 
@@ -65,9 +65,9 @@
         </div>
         <div id="v5">
             <li>
-                <ol><img src="./images/a1.jpg" class="page_A" ><span onclick="fon_a(0);">les Bleus en huitièmes de finale, l'Argentine respire</span></ol>
-                <ol><img src="./images/a2.jpg" class="page_A" ><span onclick="fon_a(1);">entrée en lice de Neymar et Ronaldo</span></ol>
-                <ol><img src="./images/a3.jpg" class="page_A"><span onclick="fon_a(2);">entrée en lice de l'Angleterre, des Pays-Bas et du Sénégal ce lundi</span></ol>
+                <ol><img src="./images/a1.jpg" class="page_A" ><span onclick="fon_a(0);" class="tx"> les Bleus en huitièmes de finale, l'Argentine respire</span></ol>
+                <ol><img src="./images/a2.jpg" class="page_A" ><span onclick="fon_a(1);" class="tx">entrée en lice de Neymar et Ronaldo</span></ol>
+                <ol><img src="./images/a3.jpg" class="page_A"><span onclick="fon_a(2);" class="tx">entrée en lice de l'Angleterre, des Pays-Bas et du Sénégal ce lundi</span></ol>
             </li>
         </div>
     </div>
@@ -91,11 +91,11 @@
     <ul>
         <h2 class="titreFotter">Links</h2>
         <a href="default.asp">
-        <img src="coup.jpg"  class="im2">
+        <img src="./images/git.jpeg" class="im3"> 
         </a>
     </ul>
     <div>
-    <img src="jiji.jpeg" alt="photo" style="width:184px;height:143px;margin-left: 355%;">
+        <img src="coup.jpg"  class="imF" >
 </div>
 </footer>
 
