ajout de matchs

--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
 </header>
 
-<body>
+<body onload="table()">
     
     <script src="javascript.js"></script>
     <div id="vo">
      
-        <iframe id="v2" name="v2" ></iframe>
+        <div id="v2" name="v2" ></div>
         <div id="v34">
             <iframe id="v3" name="v3" ></iframe>
                 <div id="page_a"></div>
