--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <header>
 
     <div id="top">
-        <h1>2022 FIFA World Cup</h1>
+        <h1 class="t11">2022 FIFA World Cup</h1>
         <nav>
             <div class="dropdown">
                 <button class="dropbtn">Acceuil</button>
