--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
         </a>
     </ul>
     <div>
-        <img src="coup.jpg"  class="imF" >
+        <h4 class="titrF">FIFA QUATAR 2022</h4>
+
 </div>
 </footer>
 
