ajout fonction groupe

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
             <div class="dropdown">
                 <button class="dropbtn">Groupes</button>
                 <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+                    <a href="#" onclick="groupes(0)">GroupeF</a>
+                    <a href="#" onclick="groupes(1)">GroupeC</a>
                 </div>
             </div>
             <div class="dropdown">
@@ -52,7 +51,7 @@
 
 </header>
 
-<body onload="table()">
+<body onload="matchs()">
     
     <script src="javascript.js"></script>
     <div id="vo">
