modification finction matchs

--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
             <div class="dropdown">
                 <button class="dropbtn">Matchs</button>
                 <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+                    <a href="#" onclick="matchs(0)">GROUPE F</a>
+                    <a href="#" onclick="matchs(1)">GROUPE C</a>
                 </div>
             </div>
         </nav>
