ajou tphoto canada et liste joueurs

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div id="v2" name="v2" ></div>
         <div id="v34">
             <iframe id="v3" name="v3" ></iframe>
-                <div id="page_a"></div>
+                <div id="v4"></div>
 
         </div>
         <div id="v5">
