--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
         <h1 class="t11">2022 FIFA World Cup</h1>
         <nav>
             <div class="dropdown">
-                <button class="dropbtn">Acceuil</button>
-                <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
-                </div>
+                <button class="dropbtn"  ><a href="index.html">Acceuil</a></button>
+                
             </div>
             <div class="dropdown">
                 <button class="dropbtn">Groupes</button>
