--- a/photoMaroc.html
+++ b/photoMaroc.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>MAROC</title>
-  </head>
- 
- 
-<body>
-  <img src="./images/maroc.jpg" usemap="#imaage-map">
 
-<map name="imaage-map">
- <area   target ="blank"  shape="rect" coords="144,64,177,119" title="Yassine Bounou" href="https://www.w3schools.com/html/html_images_imagemap.asp">
-  <area target ="blank" shape="rect" coords="484,147,519,196"  title="Hakim Ziyech " href="https://classroom.google.com/u/1/c/NDkwNjU1MzI0MjY0/a/NTcwMDM2NjE0NDg1/details">
-  <area target ="blank" shape="rect" coords="252,154,285,209" title="Achraf Hakimi " href="https://classroom.google.com/u/1/c/NDkwNjU1MzI0MjY0/a/NTcwMDM2NjE0NDg1/details">
+<head>
+    <title>MAROC</title>
+</head>
+
+<body>
+    <img src="./images/maroc.jpg" usemap="#imaage-map">
+
+    <map name="imaage-map">
+         <area shape="rect" coords="144,64,177,119" title="Yassine Bounou" href="#" onclick="creeTable(0)">
+        <area shape="rect" coords="484,147,519,196" title="Hakim Ziyech " href="#" onclick="creeTable(0)">
+        <area shape="rect" coords="252,154,285,209" title="Achraf Hakimi " href="#" onclick="creeTable(0)">
