--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
      
         <div id="v2" name="v2" ></div>
         <div id="v34">
-            <iframe id="v3" name="v3" ></iframe>
+            <div id="v3"></div>
                 <div id="v4"></div>
 
         </div>
