--- a/photoMaroc.html
+++ b/photoMaroc.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <div width="40"></div>
     <img src="./images/maroc.jpg" usemap="#imaage-map">
 
     <map name="imaage-map">
