ajout de classement

--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
             <div class="dropdown">
                 <button class="dropbtn">Classement</button>
                 <div class="dropdown-content">
-                    <a href="#">Link 1</a>
-                    <a href="#">Link 2</a>
-                    <a href="#">Link 3</a>
+                    <a href="#" onclick="Classe(0)">GroupeF</a>
+                    <a href="#" onclick="Classe(1)">GroupeC</a>
                 </div>
             </div>
             <div class="dropdown">
