--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             <div class="dropdown">
                 <button class="dropbtn">Groupes</button>
                 <div class="dropdown-content">
-                    <a href="#" onclick="groupes(0)">GroupeF</a>
-                    <a href="#" onclick="groupes(1)">GroupeC</a>
+                    <a href="#" onclick="groupes(0)">GROUPE F</a>
+                    <a href="#" onclick="groupes(1)">GROUPE C</a>
                 </div>
             </div>
             <div class="dropdown">
                 <button class="dropbtn">Classement</button>
                 <div class="dropdown-content">
-                    <a href="#" onclick="Classe(0)">GroupeF</a>
-                    <a href="#" onclick="Classe(1)">GroupeC</a>
+                    <a href="#" onclick="Classe(0)">GROUPE F</a>
+                    <a href="#" onclick="Classe(1)">GROUPE C</a>
                 </div>
             </div>
             <div class="dropdown">
