--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </nav>
     </div>
-    <img src="ho.jpg" alt="photo" class="im2">
+    <img src="./images/ho.jpg" alt="photo" class="im2">
 
 </header>
 
@@ -53,7 +53,7 @@
         <div id="v2" name="v2" ></div>
         <div id="v34">
             <div id="v3">
-                  <video id="vedio"  autoplay loop  > <source src="i3lan.mp4"></video>
+                  <video id="vedio"  autoplay loop  > <source src="./images/i3lan.mp4"></video>
             </div>
                 <div id="v4"></div>
         </div>
@@ -68,7 +68,6 @@
         </div>
     </div>
 </body>
- 
 <footer>
     <ul class="ul1">
         <h2 class="titreFotter">CONTACTS</h2>
